--- a/app/stylesheets/site.scss
+++ b/app/stylesheets/site.scss
@@ -321,11 +321,26 @@ padding: 1px 4px 15px 5px;
   -webkit-border-radius: 3px;
 }
 
+.fullshape { 
+  font-size: 14px;
+  text-align:center;
+  width: 85%;
+  /*background-color: #3274d1;*/
+  border: 1px solid #3274d1;
+  padding: 3px 5px;
+  margin: 10px auto;
+  -moz-border-radius: 9px 9px 9px 9px;
+  -webkit-border-radius: 3px;
+}
 /* ---------------------------------------- index page customer service ------------------------------------------ */
 /*html{font-size:62.5%}
 body{font-size:1.2em;color:#294f88}*/
 /*.customer_service {margin:10px;border:1px solid #92cdec;background:#d7e7ff;padding:30px 30px 0 30px}*/
-.customer_service {margin:10px;border:1px solid #92cdec;padding:30px 30px 0 30px; background:url(/images/book.png) no-repeat right }
+.customer_service {
+  margin:10px auto; background-color:#e5e5e5; color:black; padding:30px 30px 0 30px; font:bold; font-size:18px;
+  -moz-border-radius: 9px 9px 9px 9px;
+  -webkit-border-radius: 3px;
+}
 /*h1{margin:0;padding:0 0 30px 0;font-size:2em}
 h2{margin:0;padding:10px 0 5px 0;font-size:1.5em;clear:both}
 p{font-size:1.2em;line-height:170%;margin-bottom:30px;clear:both}
@@ -334,7 +349,18 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
 .customer_service h1{margin:0;padding:0 0 10px 0;font-size:1.2em}
 .customer_service p{font-size:1.2em;line-height:170%;margin-bottom:30px;clear:both}
 .customer_service ul,ol{padding:0;margin:0;font-size:1em}
-.customer_service ul,.customer_service ol{list-style-type:none;background:url(/images/dotted.gif) 0 0 repeat-x;width:180px;float:left;margin:0 10px 30px 0}
-.customer_service li{background:url(/images/dotted.gif) bottom left repeat-x;width:180px;float:left;padding:0}
+.customer_service ul,.customer_service ol {
+  list-style-type:none;
+  /*background:url(/images/dotted.gif) 0 0 repeat-x;*/
+  width:180px;
+  float:left;
+  margin:0 10px 30px 0
+}
+.customer_service li {
+  background:url(/images/dotted.gif) bottom left repeat-x;
+  width:180px;
+  float:left;
+  padding:0
+}
 .customer_service li a{padding:8px 20px 8px 0;width:160px;float:left;background:url(/images/arrow-right.gif) right 12px no-repeat;text-decoration:none;color:#294f88}
 .customer_service li a:hover{background-image:url(/images/arrow-right-dark.gif)}
