--- a/app/views/site/_wiki.html.haml
+++ b/app/views/site/_wiki.html.haml
@@ -1,5 +1,7 @@
 .customer_service
-  %h1= t 'site.rule'
+  %h1
+    = image_tag('help.png')
+    = t 'site.rule'
   %ul#customer_service
     - @articles.each do |c|
       %li
