--- a/public/stylesheets/compiled/site.css
+++ b/public/stylesheets/compiled/site.css
@@ -377,16 +377,33 @@ tfoot th, tfoot td {
   -webkit-border-radius: 3px;
 }
 
+/* line 324, ../../../app/stylesheets/site.scss */
+.fullshape {
+  font-size: 14px;
+  text-align: center;
+  width: 85%;
+  /*background-color: #3274d1;*/
+  border: 1px solid #3274d1;
+  padding: 3px 5px;
+  margin: 10px auto;
+  -moz-border-radius: 9px 9px 9px 9px;
+  -webkit-border-radius: 3px;
+}
+
 /* ---------------------------------------- index page customer service ------------------------------------------ */
 /*html{font-size:62.5%}
 body{font-size:1.2em;color:#294f88}*/
 /*.customer_service {margin:10px;border:1px solid #92cdec;background:#d7e7ff;padding:30px 30px 0 30px}*/
-/* line 328, ../../../app/stylesheets/site.scss */
+/* line 339, ../../../app/stylesheets/site.scss */
 .customer_service {
-  margin: 10px;
-  border: 1px solid #92cdec;
+  margin: 10px auto;
+  background-color: #e5e5e5;
+  color: black;
   padding: 30px 30px 0 30px;
-  background: url(/images/book.png) no-repeat right;
+  font: bold;
+  font-size: 18px;
+  -moz-border-radius: 9px 9px 9px 9px;
+  -webkit-border-radius: 3px;
 }
 
 /*h1{margin:0;padding:0 0 30px 0;font-size:2em}
@@ -394,14 +411,14 @@ h2{margin:0;padding:10px 0 5px 0;font-size:1.5em;clear:both}
 p{font-size:1.2em;line-height:170%;margin-bottom:30px;clear:both}
 ul,ol{padding:0;margin:0;font-size:1.2em}
 */
-/* line 334, ../../../app/stylesheets/site.scss */
+/* line 349, ../../../app/stylesheets/site.scss */
 .customer_service h1 {
   margin: 0;
   padding: 0 0 10px 0;
   font-size: 1.2em;
 }
 
-/* line 335, ../../../app/stylesheets/site.scss */
+/* line 350, ../../../app/stylesheets/site.scss */
 .customer_service p {
   font-size: 1.2em;
   line-height: 170%;
@@ -409,23 +426,23 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   clear: both;
 }
 
-/* line 336, ../../../app/stylesheets/site.scss */
+/* line 351, ../../../app/stylesheets/site.scss */
 .customer_service ul, ol {
   padding: 0;
   margin: 0;
   font-size: 1em;
 }
 
-/* line 337, ../../../app/stylesheets/site.scss */
+/* line 352, ../../../app/stylesheets/site.scss */
 .customer_service ul, .customer_service ol {
   list-style-type: none;
-  background: url(/images/dotted.gif) 0 0 repeat-x;
+  /*background:url(/images/dotted.gif) 0 0 repeat-x;*/
   width: 180px;
   float: left;
   margin: 0 10px 30px 0;
 }
 
-/* line 338, ../../../app/stylesheets/site.scss */
+/* line 359, ../../../app/stylesheets/site.scss */
 .customer_service li {
   background: url(/images/dotted.gif) bottom left repeat-x;
   width: 180px;
@@ -433,7 +450,7 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   padding: 0;
 }
 
-/* line 339, ../../../app/stylesheets/site.scss */
+/* line 365, ../../../app/stylesheets/site.scss */
 .customer_service li a {
   padding: 8px 20px 8px 0;
   width: 160px;
@@ -443,7 +460,7 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   color: #294f88;
 }
 
-/* line 340, ../../../app/stylesheets/site.scss */
+/* line 366, ../../../app/stylesheets/site.scss */
 .customer_service li a:hover {
   background-image: url(/images/arrow-right-dark.gif);
 }
