--- a/app/views/users/_head.html.haml
+++ b/app/views/users/_head.html.haml
@@ -6,7 +6,7 @@
     \|
     = link_to t('site.my_participants'), :controller=>'account', :action=>'participant', :id=>@user
     \|
-    = link_to t('account.charge'), @user
+    = link_to t('account.charge'), :controller=>'account', :action=>'charge_log', :id=>@user
     \|
     = link_to t('site.small_cash'), :controller=>'account', :action=>'small_cash', :id=>@user
     \|
