--- a/app/stylesheets/site.scss
+++ b/app/stylesheets/site.scss
@@ -337,9 +337,8 @@ padding: 1px 4px 15px 5px;
 body{font-size:1.2em;color:#294f88}*/
 /*.customer_service {margin:10px;border:1px solid #92cdec;background:#d7e7ff;padding:30px 30px 0 30px}*/
 .customer_service {
-  margin:10px auto; background-color:#e5e5e5; color:black; padding:30px 30px 0 30px; font:bold; font-size:18px;
-  -moz-border-radius: 9px 9px 9px 9px;
-  -webkit-border-radius: 3px;
+  margin:10px auto; background-color:white; color:#0066cc; padding:30px 30px 0 30px; font:bold; font-size:18px;
+  height:30px;
 }
 /*h1{margin:0;padding:0 0 30px 0;font-size:2em}
 h2{margin:0;padding:10px 0 5px 0;font-size:1.5em;clear:both}
@@ -351,7 +350,7 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
 .customer_service ul,ol{padding:0;margin:0;font-size:1em}
 .customer_service ul,.customer_service ol {
   list-style-type:none;
-  /*background:url(/images/dotted.gif) 0 0 repeat-x;*/
+  background:url(/images/dotted.gif) 0 0 repeat-x;
   width:180px;
   float:left;
   margin:0 10px 30px 0
