--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -531,13 +531,12 @@ body{font-size:1.2em;color:#294f88}*/
 /* line 339, ../../../app/stylesheets/site.scss */
 .customer_service {
   margin: 10px auto;
-  background-color: #e5e5e5;
-  color: black;
+  background-color: white;
+  color: #0066cc;
   padding: 30px 30px 0 30px;
   font: bold;
   font-size: 18px;
-  -moz-border-radius: 9px 9px 9px 9px;
-  -webkit-border-radius: 3px;
+  height: 30px;
 }
 
 /*h1{margin:0;padding:0 0 30px 0;font-size:2em}
@@ -545,14 +544,14 @@ h2{margin:0;padding:10px 0 5px 0;font-size:1.5em;clear:both}
 p{font-size:1.2em;line-height:170%;margin-bottom:30px;clear:both}
 ul,ol{padding:0;margin:0;font-size:1.2em}
 */
-/* line 349, ../../../app/stylesheets/site.scss */
+/* line 348, ../../../app/stylesheets/site.scss */
 .customer_service h1 {
   margin: 0;
   padding: 0 0 10px 0;
   font-size: 1.2em;
 }
 
-/* line 350, ../../../app/stylesheets/site.scss */
+/* line 349, ../../../app/stylesheets/site.scss */
 .customer_service p {
   font-size: 1.2em;
   line-height: 170%;
@@ -560,23 +559,23 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   clear: both;
 }
 
-/* line 351, ../../../app/stylesheets/site.scss */
+/* line 350, ../../../app/stylesheets/site.scss */
 .customer_service ul, ol {
   padding: 0;
   margin: 0;
   font-size: 1em;
 }
 
-/* line 352, ../../../app/stylesheets/site.scss */
+/* line 351, ../../../app/stylesheets/site.scss */
 .customer_service ul, .customer_service ol {
   list-style-type: none;
-  /*background:url(/images/dotted.gif) 0 0 repeat-x;*/
+  background: url(/images/dotted.gif) 0 0 repeat-x;
   width: 180px;
   float: left;
   margin: 0 10px 30px 0;
 }
 
-/* line 359, ../../../app/stylesheets/site.scss */
+/* line 358, ../../../app/stylesheets/site.scss */
 .customer_service li {
   background: url(/images/dotted.gif) bottom left repeat-x;
   width: 180px;
@@ -584,7 +583,7 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   padding: 0;
 }
 
-/* line 365, ../../../app/stylesheets/site.scss */
+/* line 364, ../../../app/stylesheets/site.scss */
 .customer_service li a {
   padding: 8px 20px 8px 0;
   width: 160px;
@@ -594,7 +593,7 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   color: #294f88;
 }
 
-/* line 366, ../../../app/stylesheets/site.scss */
+/* line 365, ../../../app/stylesheets/site.scss */
 .customer_service li a:hover {
   background-image: url(/images/arrow-right-dark.gif);
 }
@@ -1114,18 +1113,17 @@ body #notice {
 }
 /* line 115, ../../../app/stylesheets/screen.scss */
 body #error {
-  /*background-color: #ef7070;*/
   background-color: #f9767f;
   width: 92%;
   margin: 1px auto;
   -moz-border-radius: 9px 9px 9px 9px;
   -webkit-border-radius: 3px;
 }
-/* line 123, ../../../app/stylesheets/screen.scss */
+/* line 122, ../../../app/stylesheets/screen.scss */
 body .error {
   background-color: #ef7070;
 }
-/* line 126, ../../../app/stylesheets/screen.scss */
+/* line 125, ../../../app/stylesheets/screen.scss */
 body #equal-left {
   display: inline;
   float: left;
@@ -1133,7 +1131,7 @@ body #equal-left {
   width: 49.466%;
   margin-right: 1.042%;
 }
-/* line 129, ../../../app/stylesheets/screen.scss */
+/* line 128, ../../../app/stylesheets/screen.scss */
 body #equal-right {
   display: inline;
   float: left;
@@ -1141,7 +1139,7 @@ body #equal-right {
   width: 49.466%;
   margin-right: 0;
 }
-/* line 132, ../../../app/stylesheets/screen.scss */
+/* line 131, ../../../app/stylesheets/screen.scss */
 body #space-right {
   display: inline;
   float: left;
@@ -1149,7 +1147,7 @@ body #space-right {
   width: 3.167%;
   margin-right: 0;
 }
-/* line 135, ../../../app/stylesheets/screen.scss */
+/* line 134, ../../../app/stylesheets/screen.scss */
 body #space-left {
   display: inline;
   float: left;
@@ -1157,7 +1155,7 @@ body #space-left {
   width: 3.167%;
   margin-right: 1.042%;
 }
-/* line 138, ../../../app/stylesheets/screen.scss */
+/* line 137, ../../../app/stylesheets/screen.scss */
 body #middle {
   display: inline;
   float: left;
@@ -1165,7 +1163,7 @@ body #middle {
   width: 91.556%;
   margin-right: 1.042%;
 }
-/* line 141, ../../../app/stylesheets/screen.scss */
+/* line 140, ../../../app/stylesheets/screen.scss */
 body #left3 {
   display: inline;
   float: left;
@@ -1173,7 +1171,7 @@ body #left3 {
   width: 32.63%;
   margin-right: 1.042%;
 }
-/* line 144, ../../../app/stylesheets/screen.scss */
+/* line 143, ../../../app/stylesheets/screen.scss */
 body #middle3 {
   display: inline;
   float: left;
@@ -1181,7 +1179,7 @@ body #middle3 {
   width: 32.63%;
   margin-right: 1.042%;
 }
-/* line 147, ../../../app/stylesheets/screen.scss */
+/* line 146, ../../../app/stylesheets/screen.scss */
 body #right33 {
   display: inline;
   float: left;
@@ -1252,13 +1250,13 @@ form textarea {
   height: 250px;
 }
 
-/* line 155, ../../../app/stylesheets/screen.scss */
+/* line 154, ../../../app/stylesheets/screen.scss */
 html, body {
   height: 98%;
   margin: 0;
 }
 
-/* line 157, ../../../app/stylesheets/screen.scss */
+/* line 156, ../../../app/stylesheets/screen.scss */
 #wrapper {
   min-height: 100%;
   height: auto !important;
@@ -1266,7 +1264,7 @@ html, body {
   margin: 0 auto -20;
 }
 
-/* line 163, ../../../app/stylesheets/screen.scss */
+/* line 162, ../../../app/stylesheets/screen.scss */
 #footer, #push {
   height: 20;
   text-align: center;
