--- a/public/stylesheets/news.css
+++ b/public/stylesheets/news.css
@@ -1,25 +1,28 @@
 /*{ margin:0; padding:0; }*/
 
 #newsticker-demo { 
-width:90%; 
+width:95%; 
       /*background:#EAF4F5; */
 padding:5px 5px 0; 
         font-family:Verdana,Arial,Sans-Serif;
         font-size:12px;
-margin:20px auto;
+margin:5px auto;
 }
 
 #newsticker-demo a { text-decoration:none; }
 #newsticker-demo img { border: 2px solid #FFFFFF; }
 
 #newsticker-demo .title {
-/*background:#EAF4F5;*/
-background:#3274d1;
-color:white;
-           text-align:center;
-           font-size:14px;
-           font-weight:bold;
+  /*background:#EAF4F5;*/
+  /*background:#3274d1;*/
+border: 1px solid #3274d1;
+color:#0066cc;
+      text-align:center;
+      font-size:14px;
+      font-weight:bold;
 padding:5px;
+        -moz-border-radius: 9px 9px 9px 9px;
+        -webkit-border-radius: 3px;
 }
 
 .newsticker-jcarousellite { width:100%; }
