--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -103,15 +103,16 @@
                   = link_to t('site.manage_center'), admin? ? users_path : ''
                   = image_tag 'arrow.png', :width => 18, :height => 15, :align => 'top', :class => 'arrow'
                 .sub_menu
-                  = link_to t('site.user_manage'), users_path if admin?
-                  %hr
-                  = link_to t('site.cash_task'), :controller=>'board', :action=>'task_list', :task_type => 'cash'
-                  = link_to t('site.big_cash'), '/t/big_cash'
-                  = link_to t('trade.manage_payment'), '/m/approve/charge'
-                  = link_to t('trade.manage_point'), '/m/approve/point'
-                  =# link_to t('trade.manage_recyling'), '/m/approve/recyling'
-                  = link_to t('trade.manage_score'), '/m/approve/score'
-                  %hr
+                  - if admin?
+                    = link_to t('site.user_manage'), users_path
+                    %hr
+                    = link_to t('site.cash_task'), :controller=>'board', :action=>'task_list', :task_type => 'cash'
+                    = link_to t('site.big_cash'), '/t/big_cash'
+                    = link_to t('trade.manage_payment'), '/m/approve/charge'
+                    = link_to t('trade.manage_point'), '/m/approve/point'
+                    =# link_to t('trade.manage_recyling'), '/m/approve/recyling'
+                    = link_to t('trade.manage_score'), '/m/approve/score'
+                    %hr
                   = link_to t('site.issue'), issues_path
                   = link_to t('site.tasklog_center'), '/t/tasklogs'
                   = link_to t('site.accountlog_center'), '/t/accountlogs'
